--- a/mymap.html
+++ b/mymap.html
@@ -8,58 +8,75 @@
 	function initialize() {
 		var centerlatlng = new google.maps.LatLng(-6.204247, 106.821859);
 		var myOptions = {
-			zoom: 16,
+			zoom: 18,
 			center: centerlatlng,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 		};
 		var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 
+var PolylineCoordinates = [
+new google.maps.LatLng(-6.204080, 106.821763),
+new google.maps.LatLng(-6.204247, 106.821859),
+];
+
+var Path = new google.maps.Polyline({
+clickable: false,
+geodesic: true,
+path: PolylineCoordinates,
+strokeColor: "#6495ED",
+strokeOpacity: 1.000000,
+strokeWeight: 7
+});
+
+Path.setMap(map);
+
+
 var coords = [
-new google.maps.LatLng(-6.203887, 106.821859),
-new google.maps.LatLng(-6.203893, 106.821796),
-new google.maps.LatLng(-6.203909, 106.821735),
-new google.maps.LatLng(-6.203935, 106.821678),
-new google.maps.LatLng(-6.203971, 106.821626),
-new google.maps.LatLng(-6.204016, 106.821582),
-new google.maps.LatLng(-6.204067, 106.821546),
-new google.maps.LatLng(-6.204124, 106.821519),
-new google.maps.LatLng(-6.204184, 106.821503),
-new google.maps.LatLng(-6.204247, 106.821497),
-new google.maps.LatLng(-6.204309, 106.821503),
-new google.maps.LatLng(-6.204369, 106.821519),
-new google.maps.LatLng(-6.204426, 106.821546),
-new google.maps.LatLng(-6.204478, 106.821582),
-new google.maps.LatLng(-6.204522, 106.821626),
-new google.maps.LatLng(-6.204558, 106.821678),
-new google.maps.LatLng(-6.204584, 106.821735),
-new google.maps.LatLng(-6.204600, 106.821796),
-new google.maps.LatLng(-6.204606, 106.821859),
-new google.maps.LatLng(-6.204600, 106.821921),
-new google.maps.LatLng(-6.204584, 106.821982),
-new google.maps.LatLng(-6.204558, 106.822039),
-new google.maps.LatLng(-6.204522, 106.822091),
-new google.maps.LatLng(-6.204478, 106.822136),
-new google.maps.LatLng(-6.204426, 106.822172),
-new google.maps.LatLng(-6.204369, 106.822198),
-new google.maps.LatLng(-6.204309, 106.822215),
-new google.maps.LatLng(-6.204247, 106.822220),
-new google.maps.LatLng(-6.204184, 106.822215),
-new google.maps.LatLng(-6.204124, 106.822198),
-new google.maps.LatLng(-6.204067, 106.822172),
-new google.maps.LatLng(-6.204016, 106.822136),
-new google.maps.LatLng(-6.203971, 106.822091),
-new google.maps.LatLng(-6.203935, 106.822039),
-new google.maps.LatLng(-6.203909, 106.821982),
-new google.maps.LatLng(-6.203893, 106.821921),
+new google.maps.LatLng(-6.204202, 106.821859),
+new google.maps.LatLng(-6.204202, 106.821851),
+new google.maps.LatLng(-6.204204, 106.821843),
+new google.maps.LatLng(-6.204208, 106.821836),
+new google.maps.LatLng(-6.204212, 106.821830),
+new google.maps.LatLng(-6.204218, 106.821824),
+new google.maps.LatLng(-6.204224, 106.821820),
+new google.maps.LatLng(-6.204231, 106.821816),
+new google.maps.LatLng(-6.204239, 106.821814),
+new google.maps.LatLng(-6.204247, 106.821814),
+new google.maps.LatLng(-6.204254, 106.821814),
+new google.maps.LatLng(-6.204262, 106.821816),
+new google.maps.LatLng(-6.204269, 106.821820),
+new google.maps.LatLng(-6.204275, 106.821824),
+new google.maps.LatLng(-6.204281, 106.821830),
+new google.maps.LatLng(-6.204285, 106.821836),
+new google.maps.LatLng(-6.204289, 106.821843),
+new google.maps.LatLng(-6.204291, 106.821851),
+new google.maps.LatLng(-6.204292, 106.821859),
+new google.maps.LatLng(-6.204291, 106.821867),
+new google.maps.LatLng(-6.204289, 106.821874),
+new google.maps.LatLng(-6.204285, 106.821881),
+new google.maps.LatLng(-6.204281, 106.821888),
+new google.maps.LatLng(-6.204275, 106.821893),
+new google.maps.LatLng(-6.204269, 106.821898),
+new google.maps.LatLng(-6.204262, 106.821901),
+new google.maps.LatLng(-6.204254, 106.821903),
+new google.maps.LatLng(-6.204247, 106.821904),
+new google.maps.LatLng(-6.204239, 106.821903),
+new google.maps.LatLng(-6.204231, 106.821901),
+new google.maps.LatLng(-6.204224, 106.821898),
+new google.maps.LatLng(-6.204218, 106.821893),
+new google.maps.LatLng(-6.204212, 106.821888),
+new google.maps.LatLng(-6.204208, 106.821881),
+new google.maps.LatLng(-6.204204, 106.821874),
+new google.maps.LatLng(-6.204202, 106.821867),
 ];
 
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "o",
+fillColor: "#0000FF",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "o",
+strokeColor: "#0000FF",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
@@ -68,51 +85,51 @@ polygon.setMap(map);
 
 
 var coords = [
-new google.maps.LatLng(-6.203721, 106.821763),
-new google.maps.LatLng(-6.203726, 106.821700),
-new google.maps.LatLng(-6.203743, 106.821640),
-new google.maps.LatLng(-6.203769, 106.821582),
-new google.maps.LatLng(-6.203805, 106.821531),
-new google.maps.LatLng(-6.203849, 106.821486),
-new google.maps.LatLng(-6.203901, 106.821450),
-new google.maps.LatLng(-6.203957, 106.821424),
-new google.maps.LatLng(-6.204018, 106.821407),
-new google.maps.LatLng(-6.204080, 106.821402),
-new google.maps.LatLng(-6.204143, 106.821407),
-new google.maps.LatLng(-6.204203, 106.821424),
-new google.maps.LatLng(-6.204260, 106.821450),
-new google.maps.LatLng(-6.204311, 106.821486),
-new google.maps.LatLng(-6.204356, 106.821531),
-new google.maps.LatLng(-6.204391, 106.821582),
-new google.maps.LatLng(-6.204418, 106.821640),
-new google.maps.LatLng(-6.204434, 106.821700),
-new google.maps.LatLng(-6.204440, 106.821763),
-new google.maps.LatLng(-6.204434, 106.821826),
-new google.maps.LatLng(-6.204418, 106.821887),
-new google.maps.LatLng(-6.204391, 106.821944),
-new google.maps.LatLng(-6.204356, 106.821996),
-new google.maps.LatLng(-6.204311, 106.822040),
-new google.maps.LatLng(-6.204260, 106.822076),
-new google.maps.LatLng(-6.204203, 106.822103),
-new google.maps.LatLng(-6.204143, 106.822119),
-new google.maps.LatLng(-6.204080, 106.822125),
-new google.maps.LatLng(-6.204018, 106.822119),
-new google.maps.LatLng(-6.203957, 106.822103),
-new google.maps.LatLng(-6.203901, 106.822076),
-new google.maps.LatLng(-6.203849, 106.822040),
-new google.maps.LatLng(-6.203805, 106.821996),
-new google.maps.LatLng(-6.203769, 106.821944),
-new google.maps.LatLng(-6.203743, 106.821887),
-new google.maps.LatLng(-6.203726, 106.821826),
+new google.maps.LatLng(-6.204035, 106.821763),
+new google.maps.LatLng(-6.204036, 106.821755),
+new google.maps.LatLng(-6.204038, 106.821748),
+new google.maps.LatLng(-6.204041, 106.821741),
+new google.maps.LatLng(-6.204046, 106.821734),
+new google.maps.LatLng(-6.204051, 106.821729),
+new google.maps.LatLng(-6.204058, 106.821724),
+new google.maps.LatLng(-6.204065, 106.821721),
+new google.maps.LatLng(-6.204073, 106.821719),
+new google.maps.LatLng(-6.204080, 106.821718),
+new google.maps.LatLng(-6.204088, 106.821719),
+new google.maps.LatLng(-6.204096, 106.821721),
+new google.maps.LatLng(-6.204103, 106.821724),
+new google.maps.LatLng(-6.204109, 106.821729),
+new google.maps.LatLng(-6.204115, 106.821734),
+new google.maps.LatLng(-6.204119, 106.821741),
+new google.maps.LatLng(-6.204123, 106.821748),
+new google.maps.LatLng(-6.204125, 106.821755),
+new google.maps.LatLng(-6.204125, 106.821763),
+new google.maps.LatLng(-6.204125, 106.821771),
+new google.maps.LatLng(-6.204123, 106.821779),
+new google.maps.LatLng(-6.204119, 106.821786),
+new google.maps.LatLng(-6.204115, 106.821792),
+new google.maps.LatLng(-6.204109, 106.821798),
+new google.maps.LatLng(-6.204103, 106.821802),
+new google.maps.LatLng(-6.204096, 106.821806),
+new google.maps.LatLng(-6.204088, 106.821808),
+new google.maps.LatLng(-6.204080, 106.821808),
+new google.maps.LatLng(-6.204073, 106.821808),
+new google.maps.LatLng(-6.204065, 106.821806),
+new google.maps.LatLng(-6.204058, 106.821802),
+new google.maps.LatLng(-6.204051, 106.821798),
+new google.maps.LatLng(-6.204046, 106.821792),
+new google.maps.LatLng(-6.204041, 106.821786),
+new google.maps.LatLng(-6.204038, 106.821779),
+new google.maps.LatLng(-6.204036, 106.821771),
 ];
 
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "#000000",
+fillColor: "#FF0000",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "#000000",
+strokeColor: "#FF0000",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
